<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Walk 2 Wake</string>
    <string name="action_settings">Settings</string>
    <string name="add_alarm">Add new alarm</string>
    <string name="time_picker_button">Show Time Picker</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="repeat_textView">Repeats on:</string>
    <string name="cancel_text">CANCEL</string>
    <string name="save_text">SAVE</string>
    <string name="delete_text">DELETE</string>
    <string name="add_alarm_button">New alarm</string>
    <string name="clock_face_description">The face of the clock</string>
    <string name="am_pm_button">AM/PM toggle button</string>
    <string name="hour_arrow">Arrow to choose hour</string>
	<string name="walk_status_description">Walk Progress Status</string>
	<string name="walk_message_prompt">Keep walking to turn off the alarm!!!</string>
    
</resources>
