<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

   	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:baselineAligned="false"
	    android:orientation="horizontal">
	    
	    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
            
			<TextView
		        android:id="@+id/alarm_time_textView"
		        android:layout_width="80dp"
		        android:layout_height="match_parent"
		        android:gravity="center"
		        android:padding="2dp"
		        android:text="00:00"
		        android:textColor="#0a8bd6"
		        android:textSize="24sp"
		        android:textStyle="bold|normal" />
	
		    <TextView
		        android:id="@+id/alarm_am_pm_textView"
		        android:layout_width="wrap_content"
		        android:layout_height="80dp"
		        android:gravity="center"
		        android:text="AM"
		        android:textColor="#0a8bd6"
		        android:textSize="12sp"
		        android:textStyle="bold|normal"
		        android:padding="2dp"/>
	    
	    </LinearLayout>
	    
	    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sunday_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/sunday"
                android:textColor="#008000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/monday_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/monday"
                android:textColor="#008000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tuesday_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/tuesday"
                android:textColor="#008000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wednesday_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/wednesday"
                android:textColor="#008000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thursday_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/thursday"
                android:textColor="#008000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/friday_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/friday"
                android:textColor="#008000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/saturday_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/saturday"
                android:textColor="#008000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
           
    </LinearLayout>
	
</LinearLayout>
